test/scc/pp/errors/004.a
004.t:2:9: error: 'A' redefenition